NIFI-13175: - Fixing double scroll bar issues in more non tabbed dialogs.

--- a/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/flow-configuration-history/ui/flow-configuration-history-listing/action-details/action-details.component.scss
+++ b/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/flow-configuration-history/ui/flow-configuration-history-listing/action-details/action-details.component.scss
@@ -17,14 +17,9 @@
 
 .action-details {
     .action-details-content {
-        .mdc-dialog__content {
-            padding: 0 16px;
-            font-size: 14px;
-
-            .panel-content {
-                position: relative;
-                overflow-y: auto;
-            }
+        .panel-content {
+            position: relative;
+            overflow-y: auto;
         }
     }
 }
